# codigo-examne

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
app/: __init__.py  admin_views.py  commands.py  config.py  extensions.py  models.py  views.py
app/auth/: __init__.py  decorators.py  routes.py  schemas.py
app/categorias/: __init__.py  routes.py  schemas.py
app/pedidos/: __init__.py  pdf_generator.py  routes.py  schemas.py
app/productos/: __init__.py  routes.py  schemas.py  utils.py
app/static/css/: admin-style.css  style.css
app/templates/: base.html  index.html
app/templates/admin/: index.html  master.html
app/templates/admin/model/: create.html  details.html  edit.html  list.html
app/templates/auth/: cambiar_password.html  editar_perfil.html  login.html  perfil.html  registro.html
app/templates/categorias/: crear.html  editar.html  listar.html  ver.html
app/templates/pedidos/: crear.html  editar.html  listar.html  ver.html
app/templates/productos/: crear.html  editar.html  listar.html  test_editar.html  ver.html
app/templates/tienda/: carrito.html  checkout.html  index.html  procesando_pago.html  producto_detalle.html
app/tienda/: __init__.py  routes.py
